First version. Working creating receipts
