# app/models/Receipt.js
@@ -1,11 +1,0 @@
-class Receipt {
-
-    constructor({name, price, created_at}) {
-        this.name = name
-        this.price = price
-        this.createdAt = created_at
-    }
-
-}
-
-module.exports = Receipt
