# app/routes/index.js
@@ -1,6 +1,6 @@
 const logger = require("my-custom-logger")
 
-function Routes({fastify, mainController}) {
+function Routes({fastify, receiptController}) {
     fastify.setErrorHandler((error, request, reply) => {
         console.log(error)
         if (error.message === "Not Found") {
@@ -14,7 +14,7 @@ function Routes({fastify, mainController}) {
         reply.type("application/json").code(500).send()
     })
 
-    fastify.post("/api/v1/receipt", mainController.processReceipt)
+    fastify.post("/api/v1/receipt", receiptController.createReceipt)
 }
 
 module.exports = Routes
